--- a/wezdrexpress/app_web/WEB-INF/web.xml
+++ b/wezdrexpress/app_web/WEB-INF/web.xml
@@ -4,33 +4,48 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
 	<display-name>wezdrexpress</display-name>
-
+	<!-- Context param -->
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
 	</context-param>
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/rxp-context.xml</param-value>
+	</context-param>
+	<!-- Listeners -->
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	<!-- <listener> <listener-class>com.sun.faces.config.ConfigureListener</listener-class> 
+		</listener> -->
+	<!-- <listener> <listener-class>com.sun.faces.application.WebappLifecycleListener</listener-class> 
+		</listener> -->
+	<!-- servlets -->
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
-        <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>/faces/*</url-pattern>
-    </servlet-mapping>
+		<servlet-name>Faces Servlet</servlet-name>
+		<url-pattern>/faces/*</url-pattern>
+	</servlet-mapping>
 	<servlet-mapping>
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
-	<welcome-file-list>
-		<welcome-file>index.xhtml</welcome-file>
-	</welcome-file-list>
+
 	<servlet>
 		<servlet-name>Inicio</servlet-name>
 		<servlet-class>w_01.SerbletIncio</servlet-class>
 		<init-param>
 			<param-name>edison</param-name>
-			<param-value>saludoss</param-value>
+			<param-value>saludos</param-value>
 		</init-param>
+		<load-on-startup>2</load-on-startup>
 	</servlet>
+	<welcome-file-list>
+		<welcome-file>index.xhtml</welcome-file>
+	</welcome-file-list>
 </web-app>
