--- a/wezdrexpress/app_web/WEB-INF/web.xml
+++ b/wezdrexpress/app_web/WEB-INF/web.xml
@@ -21,21 +21,26 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	<listener>
+	<!-- <listener>
 		<listener-class>com.sun.faces.config.ConfigureListener</listener-class>
-	</listener>
+	</listener> -->
 	<!-- <listener> <listener-class>com.sun.faces.application.WebappLifecycleListener</listener-class> 
 		</listener> -->
 	<!-- servlets -->
-	<servlet>
+	 <servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
-	</servlet>
+	</servlet> 
 	<servlet>
 		<servlet-name>Hibernate</servlet-name>
 		<servlet-class>com.rexpress.config.hibernate.persistence.ConfigHibernate</servlet-class>
 		<load-on-startup>2</load-on-startup>
+	</servlet> 
+	<servlet>
+		<servlet-name>persistence</servlet-name>
+		<servlet-class>com.rexpress.config.persistence.ConfigPersistence</servlet-class>
+		<load-on-startup>3</load-on-startup>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Faces Servlet</servlet-name>
