--- a/wezdrexpress/pom.xml
+++ b/wezdrexpress/pom.xml
@@ -45,6 +45,12 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet.jsp.jstl</groupId>
+			<artifactId>jstl-api</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 
 		<!-- JSF -->
 		<dependency>
@@ -87,7 +93,7 @@
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.1-api</artifactId>
 			<version>1.0.0.Final</version>
-		</dependency>  
+		</dependency>
 
 
 		<!-- SPRING -->
