--- a/wezdrexpress/app_web/WEB-INF/web.xml
+++ b/wezdrexpress/app_web/WEB-INF/web.xml
@@ -17,6 +17,11 @@
 		<param-name>javax.faces.CONFIG_FILES</param-name>
 		<param-value>WEB-INF/faces-config.xml</param-value>
 	</context-param>
+	<!-- para que el explorer resuelva vistas expiradas -->
+	<context-param>
+		<param-name>com.sun.faces.enableRestoreView11Compatibility</param-name>
+		<param-value>true</param-value>
+	</context-param>
 	<!-- Listeners -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -31,13 +36,13 @@
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-	<!-- <servlet> <servlet-name>Hibernate</servlet-name> <servlet-class>com.rexpress.config.hibernate.persistence.ConfigHibernate</servlet-class> 
-		<load-on-startup>2</load-on-startup> </servlet> -->
-	<!-- <servlet>
-		<servlet-name>persistence</servlet-name>
-		<servlet-class>com.rexpress.config.persistence.ConfigPersistence</servlet-class>
-		<load-on-startup>2</load-on-startup>
+	<!--<servlet> 
+	 <servlet-name>Hibernate</servlet-name>
+	 <servlet-class>com.rexpress.config.hibernate.persistence.ConfigHibernate</servlet-class> 
+		<load-on-startup>2</load-on-startup> 
 	</servlet> -->
+	<!--<servlet> <servlet-name>persistence</servlet-name> <servlet-class>com.rexpress.config.persistence.ConfigPersistence</servlet-class> 
+		<load-on-startup>2</load-on-startup> </servlet> -->
 	<servlet-mapping>
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>/faces/*</url-pattern>
